--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
-<div style="height: 100%; width: 100%;">
-  <div>
-    <input #date type="datetime-local" (change)="setSelectedDate(getValue($event))" [value]="setValueDate()">
+<div class="max-height">
+  <div class="count-div">
+    <span id="counter" class="center">{{timeToDate | date:"dd/MM/yyyy HH:mm:ss"}}</span>
   </div>
-  
-  <div class="d-flex justify-content-center">
+  <div class="input-div">
+    <input class="center" type="datetime-local" (change)="setSelectedDate(getValue($event))" [value]="setValueDate()">
+  </div>
+  <div class="total-div">
     <p>{{seconds}} - Segundos</p>
     <p>{{minutes}} - Minutos</p>
     <p>{{hours}} - Horas</p>
     <p>{{days}} - Dias</p>
     <p>{{weeks}} - Semanas</p>
-    <p>{{timeToDate | date:"dd/MM/yyyy HH:mm:ss"}}</p>
   </div>
 </div>
